Update project name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MERN w Auth",
-  "name": "MERN Project with Authentication",
+  "short_name": "EVNTZ",
+  "name": "EVNTZ: Ticketing App",
   "icons": [
     {
       "src": "favicon.ico",
